# smyle-play

./: .env.example  .gitignore  CLAUDE.md  DEMARRER SMYLE PLAY.command  DEPLOY.md  ETAPE_1_RUNBOOK.md  HANDOFF.md  HANDOFF_2026-04-20.md  HANDOFF_SESSION.md  MAPPING_FLASK_TO_FASTAPI.md  MEMOIRE_CONVERSATION_SMYLEPLAY.md  MOCKUP_profil_artiste.html  PLAN_EXTERNE.md  POUR_CHATGPT.md  Procfile  README.md  SMYLEPLAY_STATE_2026-04-18.md  SUNO_ROUTER.md  WATCHER_SETUP.md  add_breadcrumb.py  app.py  artiste-demo.html  artiste.css  artiste.html  artiste.js  banner-card.css  banner-card.js  banner-demo.html  com.smyleplay.suno-router.plist  com.smyleplay.watcher.plist  config.py  dashboard.css  dashboard.html  dashboard.js  flask_app.py  index.html  library.css  library.html  library.js  main.py  (+21 more)
smyleplay-api/: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
smyleplay-api/alembic/: env.py
smyleplay-api/alembic/versions/: 0009_add_marketplace_tables.py  0010_strict_unlock_check.py  0010b_create_tracks_table.py  0011_extend_tracks_for_flask_migration.py  0012_add_track_legacy_id.py  0013_add_prompt_lyrics.py  0014_add_follow_system.py  (+15 more)
smyleplay-api/app/: config.py  database.py  main.py
smyleplay-api/tests/: conftest.py  test_achievements.py  test_credits_helpers.py  test_discovery_schemas.py  test_integration_unlock.py  test_marketplace_schemas.py  test_playlists.py  test_track_color_schema.py  test_tracks_profile_gate.py  test_unlocks_pricing.py
smyleplay-api/tools/: seed_adns_and_prompts.py  seed_from_tracks_json.py
(+89 files in other folders)
